# OTUS_Python

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  pyproject.toml  requirements.txt  warehouse.db
.github/workflows/: python-app.yml
01_new_project/log_analyzer/src/: log_analyzer.py
01_new_project/log_analyzer/tests/: test_report.py
03_type_annotations/basic/: any.py  final.py  optional.py  typealias.py
03_type_annotations/intermidate/: await.py  decorator.py  empty-tuple.py  generic.py  generic2.py  generic3.py  typed-dict3.py
04_internals_part_I/byterun/byterun/: pyvm2.py
04_internals_part_I/byterun/tests/: vmtest.py
06_oop/scoring_api/: api.py
07_warehouse_management/: main.py
07_warehouse_management/domain/: enums.py  exceptions.py  models.py
07_warehouse_management/infrastructure/: orm.py  repositories.py
08_pytests/scoring_api/: api.py  store.py  test.py
09_http/: server.py  test.txt
09_http/www/: index.html
10_django/: .env.example  Dockerfile  README.md  docker-compose.yaml
10_django/mysite/mysite/: settings.py
10_django/mysite/polls/: admin.py  tests.py  views.py
10_django/mysite/polls/migrations/: 0001_initial.py
10_django/mysite/polls/templates/admin/: base_site.html
11_fastapi/: main.py
12_auth/: main.py  requirements.txt
14_pandas/: homework.ipynb
15_gpt/: homework.ipynb
16_mthreading/homework/: README.md  appsinstalled_pb2.py  memc_load.py
17_c_ext/: Dockerfile  README.md  pb.c  setup.py  test.py
18_asyncio/: main.py  readme.md
18_asyncio/files/42054449/: For_the_first_t<cut>.html
18_asyncio/files/42054449/comments_pages/: Android_on_x86_<cut>.html  Intel_cuts_Atom<cut>.html  Intel’s_future_<cut>.html  Transmeta_Cruso<cut>.html  XILINX_VIRTEX_U<cut>.html  apedroid:_Binar<cut>.html
warehouse_management/: main.py  warehouse.db
warehouse_management/domain/: models.py  repositories.py  services.py
warehouse_management/infrastructure/: database.py  orm.py  repositories.py  unit_of_work.py
