[tool.poetry]
name = "OTUS_Python"
version = "0.1.0"
description = ""
authors = ["Nikita Zaystev <nikitos945max@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
redis = "^5.0.7"
sqlalchemy = "^2.0.31"
django = "^5.0.8"
psycopg2 = "^2.9.9"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
passlib = "^1.7.4"
bcrypt = "^4.2.0"
pyjwt = "^2.9.0"
python-multipart = "^0.0.9"
numpy = "^2.1.2"
scipy = "^1.14.1"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
tqdm = "^4.66.5"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
python-memcached = "^1.62"
protobuf = "^5.28.3"
beautifulsoup4 = "^4.12.3"
aiohttp = "^3.10.10"
aiofiles = "^24.1.0"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
